本番反映で気づいたバグとコピーライトを修正

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -53,7 +53,7 @@
       <%= yield %>    </div>
     <footer class="mui--bg-color-teal-50">
       <div class="mui-container mui--text-center">
-        Made with ♥ by Iwai Satoshi
+          Copyright &copy; 2017 - <%= Date.today.strftime('%Y') %> Iwai Satoshi All Rights Reserved.
       </div>
       <div class="mui-row mui--text-center func-footer">
         <div class="mui-col-md-2 mui-col-md-offset-3"><a href="/sitemap">サイトマップ</a></div>
