--- a/views/noscript_layout.erb
+++ b/views/noscript_layout.erb
@@ -29,7 +29,7 @@
     </div>
     <footer class="mui--bg-color-teal-50">
       <div class="mui-container mui--text-center">
-        Made with ♥ by Iwai Satoshi
+        Copyright &copy; 2017 - <%= Date.today.strftime('%Y') %> Iwai Satoshi. All Rights Reserved.
       </div>
     </footer>
   </body>
