--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="//cdn.muicss.com/mui-0.9.16/extra/mui-colors.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/styles/default.min.css">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.css">
-    <link rel="stylesheet" href="/css/github.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/<%= $dir %>/css/github.css">
+    <link rel="stylesheet" href="/<%= $dir %>/css/style.css">
     <meta property="og:title" content="<%= @title %>">
     <meta property="og:type" content="<% if request.path_info == "/" then %>website<% else %>article<% end %>">
     <meta property="og:description" content="<%= @description %>">
@@ -64,10 +64,11 @@
     <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="//cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.js"></script>
     <script src="//cdn.muicss.com/mui-0.9.16/js/mui.min.js"></script>
-    <script src="/js/inquiry.js"></script><% if !@js.nil? then %>
+    <script src="/<%= $dir %>/js/common.js"></script>
+    <script src="/<%= $dir %>/js/inquiry.js"></script><% if !@js.nil? then %>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
-    <script src="/js/marked.js"></script>
-    <script src="/js/<%= @js %>"></script><% end %>
+    <script src="/<%= $dir %>/js/marked.js"></script>
+    <script src="/<%= $dir %>/js/<%= @js %>"></script><% end %>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
