タイトル間違えとダブルクォーテーション対策

--- a/views/view.erb
+++ b/views/view.erb
@@ -5,5 +5,5 @@
           </div>
         </div>
       </div>
-      <input type="hidden" value="<%= @markdown %>" id="markdown">
+      <textarea id="markdown" style="display:none;"><%= @markdown %></textarea>
       <input type="hidden" value="<%= @hash %>" id="hash">
