アップデート情報のページを設定 OGPおよびfavicon画像のURLを登録可能に変更

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -9,6 +9,10 @@
               <textarea id="editor" required><%= @markdown %></textarea>
             </div>
             <div class="mui-textfield">
+              <input type="text" id="ogp_image_url">
+              <label>OGPおよびfavicon画像のURL（空の場合は表示されません。）</label>
+            </div>
+            <div class="mui-textfield">
               <input type="text" id="edit_pass" required>
               <label>削除・更新用パスワード</label>
             </div>
