--- a/views/sitemap.erb
+++ b/views/sitemap.erb
@@ -11,6 +11,7 @@
               <li><a href="/sitemap">サイトマップ</a></li>
               <li><a href="/rule">利用規約</a></li>
               <li><a href="/privacy">プライバシーポリシー</a></li>
+              <li><a href="/versions">アップデート情報</a></li>
             </ul>
           </div>
         </div>
