--- a/public/20170818/css/style.css
+++ b/public/20170818/css/style.css
@@ -28,7 +28,7 @@ header {
 }
 
 footer {
-  height: 70px;
+  height: 80px;
   border-top: 1px solid #e0e0e0;
   padding-top: 35px;
 }
@@ -64,7 +64,8 @@ textarea {
 
 @media screen and (max-width:767px) {
   footer {
-    height: 100px;
+    height: auto;
+    padding-bottom: 20px;
   }
 }
 
@@ -95,4 +96,12 @@ textarea {
     background-image:url("/img/loading.svg");
     background-position: center top;
     background-repeat: no-repeat;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.versions-margin {
+  margin-top: 1.25em !important;
 }
