--- a/views/versions.erb
+++ b/views/versions.erb
@@ -2,6 +2,14 @@
         <div class="row">
           <div class="mui-col-xs-12">
             <h1>アップデート情報</h1>
+            <h2>2019年</h2>
+            <ul>
+              <li><b>1月14日</b>
+                <ul>
+                  <li>CDN を更新</li>
+                </ul>
+              </li>
+            </ul>
             <h2>2018年</h2>
             <ul>
               <li><b>12月18日</b>
