--- a/views/layout.erb
+++ b/views/layout.erb
@@ -66,7 +66,7 @@
         <div class="mui-col-md-2"></div>
       </div>
     </footer>
-    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="//cdn.jsdelivr.net/sweetalert2/6.6.2/sweetalert2.min.js"></script>
     <script src="//cdn.muicss.com/mui-0.9.16/js/mui.min.js"></script>
     <script src="/<%= $dir %>/js/common.js"></script>
